App empleados con JSTL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 #Context path
-server.servlet.context-path=/empleados
+#server.servlet.context-path=/empleados
 #server.error.whitelabel.enabled=false
 
